# split_and_trim

./: CMakeLists.txt  README.md  bam_file.cpp  bam_file.h  fasta_file.cpp  fasta_file.h  main.cpp  split_N_cigar.cpp  split_N_cigar.h
